--- a/index.html
+++ b/index.html
@@ -255,160 +255,162 @@
             <h3>Dominic Williams</h3>
             <p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University.</p>
         </div>
-        <div class="team-feature pull-left">
-            <div class="team team-list clearfix">
-                <div class="team-image">
-                    <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+        <div class="team-list-container">
+            <div class="team-feature pull-left">
+                <div class="team team-list clearfix">
+                    <div class="team-image">
+                        <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+                    </div>
                 </div>
             </div>
+        	<div class="container pull-left">
+        		<div class="row">
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Dominic Williams</h4>
+                                    <span>President/CTO</span>
+                                </div>
+        						<div class="team-content">
+        						    <p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University.</p>
+        						</div>
+        						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://medium.com/@dominic_w" class="social-icon si-rounded si-small si-tumblr">
+        							<i class="icon-tumblr"></i>
+        							<i class="icon-tumblr"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/thedwilliams" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/tom-head1.jpg" alt="Tom Ding">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Tom Ding</h4>
+                                    <span>CEO</span>
+                                </div>
+        						<div class="team-content">
+        							<p>Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he graduated in Computer Science at age 14 and from business school at 20. Tom's a regular startup and crypto pundit.</p>
+        						</div>
+        						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/tomding" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/timo-head1.jpg" alt="Timo Hanke">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Timo Hanke</h4>
+                                    <span>Chief Cryptographer</span>
+                                </div>
+        						<div class="team-content">
+        							<p>Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the decentralization bug. Timo has worked on numerous crypto products and prior to joining String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he works on Third Generation crypto systems.</p>
+        						</div>
+        						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/timo-hanke-62079775" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        						<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
+        							<i class="icon-github"></i>
+        							<i class="icon-github"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+                </div>
+                <div class="row">
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Enzo Haussecker</h4>
+                                    <span>Senior Software Engineer</span>
+                                </div>
+        						<div class="team-content">
+        							<p>Enzo has built and maintained high-throughput computing infrastructure for several high-growth startups in Silicon Valley. He is passionate about cloud computing, automation, and loves to share his knowledge and enthusiasm with others. Enzo holds a Bachelor of Science degree in Applied Mathematics from the University of California at San Diego.</p>
+        						</div>
+        						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Tomomi Menjo</h4>
+                                    <span>Project Coordinator</span>
+                                </div>
+        						<div class="team-content">
+        							<p>A highly dynamic coordinator of String projects and business development activity, Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from Santa Clara University. She proves you don't have to be a crypto geek to help drive String!</p>
+        						</div>
+        						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/jon-head1.jpg" alt="Jon Ball">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Jon Ball</h4>
+                                    <span>Creative Lead</span>
+                                </div>
+        						<div class="team-content">
+        							<p>As an internationally renowned and influential designer, Jon has worked for many, many well known names, contributing a unique and highly original sense of style and stunning visions in print, digital and video. Jon also once worked with Dominic to create a 'growth monster' MMO that reached 3M users. A rockstar of design!</p>
+        						</div>
+        						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
+        							<i class="icon-github"></i>
+        							<i class="icon-github"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+            <div class="clearfix"></div>
         </div>
-    	<div class="container pull-left">
-    		<div class="row">
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Dominic Williams</h4>
-                                <span>President/CTO</span>
-                            </div>
-    						<div class="team-content">
-    						    <p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University.</p>
-    						</div>
-    						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://medium.com/@dominic_w" class="social-icon si-rounded si-small si-tumblr">
-    							<i class="icon-tumblr"></i>
-    							<i class="icon-tumblr"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/thedwilliams" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/tom-head1.jpg" alt="Tom Ding">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Tom Ding</h4>
-                                <span>CEO</span>
-                            </div>
-    						<div class="team-content">
-    							<p>Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he graduated in Computer Science at age 14 and from business school at 20. Tom's a regular startup and crypto pundit.</p>
-    						</div>
-    						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/tomding" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/timo-head1.jpg" alt="Timo Hanke">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Timo Hanke</h4>
-                                <span>Chief Cryptographer</span>
-                            </div>
-    						<div class="team-content">
-    							<p>Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the decentralization bug. Timo has worked on numerous crypto products and prior to joining String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he works on Third Generation crypto systems.</p>
-    						</div>
-    						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/timo-hanke-62079775" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    						<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
-    							<i class="icon-github"></i>
-    							<i class="icon-github"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-            </div>
-            <div class="row">
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Enzo Haussecker</h4>
-                                <span>Senior Software Engineer</span>
-                            </div>
-    						<div class="team-content">
-    							<p></p>
-    						</div>
-    						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Tomomi Menjo</h4>
-                                <span>Project Coordinator</span>
-                            </div>
-    						<div class="team-content">
-    							<p>A highly dynamic coordinator of String projects and business development activity, Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from Santa Clara University. She proves you don't have to be a crypto geek to help drive String!</p>
-    						</div>
-    						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/jon-head1.jpg" alt="Jon Ball">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Jon Ball</h4>
-                                <span>Creative Lead</span>
-                            </div>
-    						<div class="team-content">
-    							<p>As an internationally renowned and influential designer, Jon has worked for many, many well known names, contributing a unique and highly original sense of style and stunning visions in print, digital and video. Jon also once worked with Dominic to create a 'growth monster' MMO that reached 3M users. A rockstar of design!</p>
-    						</div>
-    						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
-    							<i class="icon-github"></i>
-    							<i class="icon-github"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-        <div class="clearfix"></div>
     </section>
 
     <section id="section-investment" class="page-section section nomargin dark bg-stringlabs full-height">
@@ -452,6 +454,11 @@
                     listener: '#section-link',
                     type: 'click',
                     handler: 'didClickSectionLink'
+                },
+                {
+                    listener: '#section-team .container .team-image',
+                    type: 'mouseover',
+                    handler: 'didClickTeamImage'
                 },
                 {
                     listener: 'html, body',
@@ -499,10 +506,29 @@
                 this.state.sections.forEach(s => {
                     $('[data-href="' + s + '"]').removeClass('active');
                 }, this);
+                if($('#team-desc').get(0).getBoundingClientRect().top < $('#primary-menu').get(0).getBoundingClientRect().bottom) {
+                   $('#team-desc').attr('style', 'opacity: 0');
+                }
+                else {
+                    $('#team-desc').attr('style', 'opacity: 1');
+                }
                 return requestAnimationFrame(ev => {
                     $('[data-href="' + section + '"]').addClass('active');
                     return this.updateSectionLink(section);
                 });
+            },
+
+            didClickTeamImage(staticArgs, event) {
+                let selector = event.target.localName === 'img' ? event.target : event.target.firstElementChild;
+                let name = $(selector).parent().next().find('.team-title > h4').html();
+                let title = $(selector).parent().next().find('.team-title > h4 + span').html();
+                let content = $(selector).parent().next().find('.team-content > p').html();
+                $('.team-list-container .team-image').removeClass('active');
+                $('.team-feature .team-image').find('img').attr('src', $(selector).attr('src'));
+                $('#team-desc > h6').html(name);
+                $('#team-desc > h3').html(title);
+                $('#team-desc > p').html(content);
+                return $(selector).parent().addClass('active');
             },
 
             didClickSectionLink(staticArgs, event) {
