--- a/ja/index.html
+++ b/ja/index.html
@@ -255,160 +255,162 @@
             <h3>Dominic Williams</h3>
             <p>英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。</p>
         </div>
-        <div class="team-feature pull-left">
-            <div class="team team-list clearfix">
-                <div class="team-image">
-                    <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+        <div class="team-list-container">
+            <div class="team-feature pull-left">
+                <div class="team team-list clearfix">
+                    <div class="team-image">
+                        <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+                    </div>
                 </div>
             </div>
+        	<div class="container pull-left">
+        		<div class="row">
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Dominic Williams</h4>
+                                    <span>President/CTO</span>
+                                </div>
+        						<div class="team-content">
+        						    <p>英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。</p>
+        						</div>
+        						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://medium.com/@dominic_w" class="social-icon si-rounded si-small si-tumblr">
+        							<i class="icon-tumblr"></i>
+        							<i class="icon-tumblr"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/thedwilliams" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/tom-head1.jpg" alt="Tom Ding">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Tom Ding</h4>
+                                    <span>CEO</span>
+                                </div>
+        						<div class="team-content">
+        							<p>上海出身の連続起業家、ブロックチェーン大学の設立者であり、また、かつてはeBayのシニアマネージャーでした。トムは2013年、ブロックチェーン・ブームの波に乗り、そのときから振り返ったことはありません。コンピュータサイエンスを14歳、ビジネススクールを20歳で卒業しました。常連の起業家であり、クリプトの権威でもあります。</p>
+        						</div>
+        						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/tomding" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/timo-head1.jpg" alt="Timo Hanke">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Timo Hanke</h4>
+                                    <span>Chief Cryptographer</span>
+                                </div>
+        						<div class="team-content">
+        							<p>ティモは、かつてドイツのアーヘン工科大学の数学および暗号学の教授でしたが、分散分野に強い興味を持ちました。数々の暗号製品に携わり、String Labsに入社する前には有名なAsicBoost（http://asicboost.com/）を発明し、特許を取得しました。 当社では、第3世代暗号システムを開発しています。</p>
+        						</div>
+        						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/timo-hanke-62079775" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        						<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
+        							<i class="icon-github"></i>
+        							<i class="icon-github"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+                </div>
+                <div class="row">
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Enzo Haussecker</h4>
+                                    <span>Senior Software Engineer</span>
+                                </div>
+        						<div class="team-content">
+        							<p>Enzo has built and maintained high-throughput computing infrastructure for several high-growth startups in Silicon Valley. He is passionate about cloud computing, automation, and loves to share his knowledge and enthusiasm with others. Enzo holds a Bachelor of Science degree in Applied Mathematics from the University of California at San Diego.</p>
+        						</div>
+        						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Tomomi Menjo</h4>
+                                    <span>Project Coordinator</span>
+                                </div>
+        						<div class="team-content">
+        							<p>トモミは、Stringプロジェクトと事業開発に携わるダイナミックなコーディネーターです。以前はMenlo Park市のWomen's Startup Labに所属しており、英語と日本語の2か国語を操ります。サンタクララ大学においてコミュニケーション学士号の優等で卒業しました。Stringを利用するために暗号オタクになる必要がないことを証明する彼女です。</p>
+        						</div>
+        						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="./images/team/jon-head1.jpg" alt="Jon Ball">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Jon Ball</h4>
+                                    <span>Creative Lead</span>
+                                </div>
+        						<div class="team-content">
+        							<p>ジョンは、世界的に有名なデザイナーです。数々の著名な人物を相手に、非常に独創的なスタイル、印象的なイメージをプリント、デジタル、ビデオを通して表現してきました。 ジョンはかつてドミニクと手を組んで、ユーザが3万人に達したMMOを制作したチームの一人です。デザインのロックスターと言えるでしょう。</p>
+        						</div>
+        						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
+        							<i class="icon-github"></i>
+        							<i class="icon-github"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+            <div class="clearfix"></div>
         </div>
-    	<div class="container pull-left">
-    		<div class="row">
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Dominic Williams</h4>
-                                <span>President/CTO</span>
-                            </div>
-    						<div class="team-content">
-    						    <p>英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。</p>
-    						</div>
-    						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://medium.com/@dominic_w" class="social-icon si-rounded si-small si-tumblr">
-    							<i class="icon-tumblr"></i>
-    							<i class="icon-tumblr"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/thedwilliams" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/tom-head1.jpg" alt="Tom Ding">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Tom Ding</h4>
-                                <span>CEO</span>
-                            </div>
-    						<div class="team-content">
-    							<p>上海出身の連続起業家、ブロックチェーン大学の設立者であり、また、かつてはeBayのシニアマネージャーでした。トムは2013年、ブロックチェーン・ブームの波に乗り、そのときから振り返ったことはありません。コンピュータサイエンスを14歳、ビジネススクールを20歳で卒業しました。常連の起業家であり、クリプトの権威でもあります。</p>
-    						</div>
-    						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/tomding" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/timo-head1.jpg" alt="Timo Hanke">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Timo Hanke</h4>
-                                <span>Chief Cryptographer</span>
-                            </div>
-    						<div class="team-content">
-    							<p>ティモは、かつてドイツのアーヘン工科大学の数学および暗号学の教授でしたが、分散分野に強い興味を持ちました。数々の暗号製品に携わり、String Labsに入社する前には有名なAsicBoost（http://asicboost.com/）を発明し、特許を取得しました。 当社では、第3世代暗号システムを開発しています。</p>
-    						</div>
-    						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/timo-hanke-62079775" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    						<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
-    							<i class="icon-github"></i>
-    							<i class="icon-github"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-            </div>
-            <div class="row">
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Enzo Haussecker</h4>
-                                <span>Senior Software Engineer</span>
-                            </div>
-    						<div class="team-content">
-    							<p></p>
-    						</div>
-    						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Tomomi Menjo</h4>
-                                <span>Project Coordinator</span>
-                            </div>
-    						<div class="team-content">
-    							<p>トモミは、Stringプロジェクトと事業開発に携わるダイナミックなコーディネーターです。以前はMenlo Park市のWomen's Startup Labに所属しており、英語と日本語の2か国語を操ります。サンタクララ大学においてコミュニケーション学士号の優等で卒業しました。Stringを利用するために暗号オタクになる必要がないことを証明する彼女です。</p>
-    						</div>
-    						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="./images/team/jon-head1.jpg" alt="Jon Ball">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Jon Ball</h4>
-                                <span>Creative Lead</span>
-                            </div>
-    						<div class="team-content">
-    							<p>ジョンは、世界的に有名なデザイナーです。数々の著名な人物を相手に、非常に独創的なスタイル、印象的なイメージをプリント、デジタル、ビデオを通して表現してきました。 ジョンはかつてドミニクと手を組んで、ユーザが3万人に達したMMOを制作したチームの一人です。デザインのロックスターと言えるでしょう。</p>
-    						</div>
-    						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
-    							<i class="icon-github"></i>
-    							<i class="icon-github"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-        <div class="clearfix"></div>
     </section>
 
     <section id="section-investment" class="page-section section nomargin dark bg-stringlabs full-height">
@@ -452,6 +454,11 @@
                     listener: '#section-link',
                     type: 'click',
                     handler: 'didClickSectionLink'
+                },
+                {
+                    listener: '#section-team .container .team-image',
+                    type: 'mouseover',
+                    handler: 'didClickTeamImage'
                 },
                 {
                     listener: 'html, body',
@@ -499,10 +506,29 @@
                 this.state.sections.forEach(s => {
                     $('[data-href="' + s + '"]').removeClass('active');
                 }, this);
+                if($('#team-desc').get(0).getBoundingClientRect().top < $('#primary-menu').get(0).getBoundingClientRect().bottom) {
+                   $('#team-desc').attr('style', 'opacity: 0');
+                }
+                else {
+                    $('#team-desc').attr('style', 'opacity: 1');
+                }
                 return requestAnimationFrame(ev => {
                     $('[data-href="' + section + '"]').addClass('active');
                     return this.updateSectionLink(section);
                 });
+            },
+
+            didClickTeamImage(staticArgs, event) {
+                let selector = event.target.localName === 'img' ? event.target : event.target.firstElementChild;
+                let name = $(selector).parent().next().find('.team-title > h4').html();
+                let title = $(selector).parent().next().find('.team-title > h4 + span').html();
+                let content = $(selector).parent().next().find('.team-content > p').html();
+                $('.team-list-container .team-image').removeClass('active');
+                $('.team-feature .team-image').find('img').attr('src', $(selector).attr('src'));
+                $('#team-desc > h6').html(name);
+                $('#team-desc > h3').html(title);
+                $('#team-desc > p').html(content);
+                return $(selector).parent().addClass('active');
             },
 
             didClickSectionLink(staticArgs, event) {
