--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         <div class="heading-block center">
             <h2>{% t index.navbar-research %}</h2>
         </div>
-        <div id="research-desc" class="pull-left">
+        <div id="research-desc" class="sidebar-content pull-left">
             <h3>{% t index.research-title %}</h3>
             <p>{% t index.research-intro %}</p>
             <p>{% t index.research-desc %}</p>
@@ -107,36 +107,90 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             <div class="heading-block center">
                 <h2>{% t index.dfinity-title %}</h2>
             </div>
+            <div id="video-filters" class="sidebar-content pull-left">
+                <h5 class="active">#tech</h5>
+                <h5 class="active">#business</h5>
+                <h5 class="active">#crypto</h5>
+                <h5 class="active">#startups</h5>
+                <h5 class="active">#culture</h5>
+                <h5 class="active">#dfinity</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+                <h5 class="active">#anothertag</h5>
+            </div>
             <div class="media-list clearfix">
-                <div class="media-item pull-left">
-                    <div class="feature-box media-box">
-                        <div class="fbox-desc center">
-                            <h4>{% t index.dfinity-brief-tour-video %}</h4>
-                            <div>▶</div>
+                <div class="row">
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="media-item pull-left">
-                    <div class="feature-box media-box">
-                        <div class="fbox-desc center">
-                            <h4>{% t index.dfinity-brief-tour-video %}</h4>
-                            <div>▶</div>
+                <div class="row">
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="media-item pull-left">
-                    <div class="feature-box media-box">
-                        <div class="fbox-desc center">
-                            <h4>{% t index.dfinity-brief-tour-video %}</h4>
-                            <div>▶</div>
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="media-item pull-left">
-                    <div class="feature-box media-box">
-                        <div class="fbox-desc center">
-                            <h4>{% t index.dfinity-brief-tour-video %}</h4>
-                            <div>▶</div>
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="media-item pull-left">
+                        <div class="feature-box media-box">
+                            <div class="fbox-desc center">
+                                <h4>{% t index.dfinity-brief-tour-video %}</h4>
+                                <div>▶</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -150,7 +204,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     		<h2>{% t index.team-title %}</h2>
     		<p>{% t index.team-subtitle %}</p>
     	</div>
-        <div id="team-desc" class="pull-left">
+        <div id="team-desc" class="sidebar-content pull-left">
             <h6>President/CTO</h6>
             <h3>Dominic Williams</h3>
             <p>{% t index.team-dominic-intro %}</p>
@@ -402,16 +456,19 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             },
 
             didScroll(staticArgs, event) {
-                let section = this.getVisibleSection($(window).scrollTop());
+                let section;
+                $('.sidebar-content').each((i, el) => {
+                    if($(el).get(0).getBoundingClientRect().top < $('#primary-menu').get(0).getBoundingClientRect().bottom) {
+                       $(el).attr('style', 'opacity: 0');
+                    }
+                    else {
+                        $(el).attr('style', 'opacity: 1');
+                    }
+                });
+                section = this.getVisibleSection($(window).scrollTop());
                 this.state.sections.forEach(s => {
                     $('[data-href="' + s + '"]').removeClass('active');
                 }, this);
-                if($('#team-desc').get(0).getBoundingClientRect().top < $('#primary-menu').get(0).getBoundingClientRect().bottom) {
-                   $('#team-desc').attr('style', 'opacity: 0');
-                }
-                else {
-                    $('#team-desc').attr('style', 'opacity: 1');
-                }
                 return requestAnimationFrame(ev => {
                     $('[data-href="' + section + '"]').addClass('active');
                     return this.updateSectionLink(section);
